
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int vec_t ;


 int Error (char*,int ) ;
 int GetTokenAppend (char*,int ) ;
 int atof (int ) ;
 int qfalse ;
 int qtrue ;
 int scriptline ;
 scalar_t__ strcmp (int ,char*) ;
 int token ;

void Parse1DMatrixAppend( char *buffer, int x, vec_t *m ){
 int i;


 if ( !GetTokenAppend( buffer, qtrue ) || strcmp( token, "(" ) ) {
  Error( "Parse1DMatrixAppend(): line %d: ( not found!", scriptline );
 }
 for ( i = 0; i < x; i++ )
 {
  if ( !GetTokenAppend( buffer, qfalse ) ) {
   Error( "Parse1DMatrixAppend(): line %d: Number not found!", scriptline );
  }
  m[ i ] = atof( token );
 }
 if ( !GetTokenAppend( buffer, qtrue ) || strcmp( token, ")" ) ) {
  Error( "Parse1DMatrixAppend(): line %d: ) not found!", scriptline );
 }
}
